--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,9 @@
 # -*- mode: gitignore; -*-
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
+## =========================================================
+## Hanzi Reader
+## ---------------------------------------------------------
 
 # Ignore emacs temporary files
 *~
@@ -6,6 +11,35 @@
 .\#*
 
 # Ignore directory with html / css / js tinkering stuff
-www/bastel
+bastel
 
-# fin.
+## =========================================================
+## React
+## ---------------------------------------------------------
+
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
+
+# testing
+/coverage
+
+# production
+/build
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+## =========================================================
+## =========================================================
+
+## fin.
