Changed my tinkering dir from 'bastel' to 'tmp' - and told .gitignore to ignore it

--- a/.gitignore
+++ b/.gitignore
@@ -10,8 +10,8 @@
 \#*\#
 .\#*
 
-# Ignore directory with html / css / js tinkering stuff
-bastel
+# Ignore tmp directory
+tmp
 
 ## =========================================================
 ## React
