Renaming 'hanzi-reader' to 'aireader' in package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hanzi-reader",
+  "name": "aireader",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -30,5 +30,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "/hanzi-reader"
+  "homepage": "/aireader"
 }
